--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <li><button id="joke-button">Dad Joke!</button></li>
   <script src="/js/script.js"></script>
   </ul>
-  <img src="/img/funny.png" alt="Funny Image" width="300" height="200">
+  <img src="/img/fennec.jpg" alt="Funny Image" width="300" height="400">
 
   <h2 id="joke-display"></h2>
 </body>
